Nouvelle mise à niveau

--- a/public/index.html
+++ b/public/index.html
@@ -27,21 +27,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <!-- Js -->
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
-    <script>
-      window.jQuery ||
-        document.write(
-          '<script src="js/vendor/jquery-1.10.2.min.js"><\/script>'
-        )
-    </script>
-
     <title>Restaurant One Page HTML5 Template</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -53,4 +45,21 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+<!-- Js -->
+      <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+      <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+      <script>
+        window.jQuery ||
+          document.write(
+            '<script src="js/vendor/jquery-1.10.2.min.js"><\/script>'
+          )
+      </script>
+      <script src="js/jquery.nav.js"></script>
+      <script src="js/jquery.sticky.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/plugins.js"></script>
+      <script src="js/wow.min.js"></script>
+      <script src="js/main.js"></script>
+
 </html>
