--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/restaurant-logo-design-template_79169-56.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta name="theme-color" content="#000000" />
@@ -46,20 +46,6 @@
     -->
   </body>
 
-<!-- Js -->
-      <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-      <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
-      <script>
-        window.jQuery ||
-          document.write(
-            '<script src="js/vendor/jquery-1.10.2.min.js"><\/script>'
-          )
-      </script>
-      <script src="js/jquery.nav.js"></script>
-      <script src="js/jquery.sticky.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/plugins.js"></script>
-      <script src="js/wow.min.js"></script>
-      <script src="js/main.js"></script>
+    
 
 </html>
